Added role-based access control for product APIs and secured endpoints