@@ -3,14 +3,15 @@ package com.bhumika.MiniMart.Service;
 
 
 import com.bhumika.MiniMart.Entity.User;
+import java.util.List;
 import com.bhumika.MiniMart.Repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
-import java.util.Collections;
 
 @Service
 public class UserDetailsServiceImpl implements UserDetailsService {
@@ -26,7 +27,7 @@ public class UserDetailsServiceImpl implements UserDetailsService {
         return new org.springframework.security.core.userdetails.User(
                 user.getEmail(),
                 user.getPassword(),
-                Collections.emptyList() // authorities (roles) yaha add kar sakte ho
+                List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name())) //yaha role map ho gaya
         );
     }
 }
